# autourgos-google-modelkit

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/autourgos_google_modelkit/: __init__.py
src/autourgos_google_modelkit/core/: __init__.py  billing.py  normalization.py  prompting.py  response.py  runtime.py  sdk.py
src/autourgos_google_modelkit/textmodel/: README.md  __init__.py  base.py  models.py
src/autourgos_google_modelkit/visionmodel/: README.md  __init__.py  base.py  models.py
test/: conftest.py  test_core_exports.py  test_textmodel.py  test_visionmodel.py
